[package]
name = "spinning_top"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
concurrent-queue = "2.5.0"
derive-getters = "0.5.0"
derive-new = "0.7.0"
derive_builder = "0.20.2"
derive_setters = "0.1.6"
egui = "0.26.2"
egui-winit = "0.26.2"
egui_glium = "0.26.3"
glium = "0.34.0"
glutin = "0.32.1"
glutin-winit = "0.5.0"
nalgebra = "0.33.0"
winit = "0.29.5"
